<resources>
    <string name="app_name">AgentApp</string>

    <string name="txt_clientname">Client Name:<font color='#FF0000'>*</font></string>
    <string name="txt_document_type">Document Type:<font color='#FF0000'>*</font></string>
    <string name="txt_document_type_id">Document Type ID:<font color='#FF0000'>*</font></string>
    <string name="txt_phone_country">Phone Country:<font color='#FF0000'>*</font></string>
    <string name="txt_phone_number">Phone Number:<font color='#FF0000'>*</font></string>
    <string name="txt_physical_location">Physical Location:<font color='#FF0000'>*</font></string>
    <string name="txt_dob">Date of Birth:<font color='#FF0000'>*</font></string>
    <string name="txt_gender_types">Select Gender:<font color='#FF0000'>*</font></string>


    <string name="txt_select_account">Select Product:<font color='#FF0000'>*</font></string>
    <string name="txt_accuntname">Account Name<font color='#FF0000'>*</font></string>
    <string name="txt_lock_mode">Select Schedule:<font color='#FF0000'>*</font></string>
    <string name="txt_target">Target Amount:<font color='#FF0000'>*</font></string>
    <string name="txt_maturity_date">Maturity Date:<font color='#FF0000'>*</font></string>



    <string name="confirmphone">+254 7..</string>
    <string name="confirmemail">example@mail.com</string>
    <string name="codereceived">Enter Code Received</string>
    <string name="submitcode">Submit</string>
    <string name="enterpass">Enter Password</string>
    <string name="Confirmpass">Confirm Password</string>
    <string name="username">Username</string>
    <string name="EmailAddress">Email Address</string>
    <string name="identifierspinner">Please select identifier</string>
    <string name="getcode">Get Code</string>
</resources>