<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lytmain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lytlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Phone :" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="Email :" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lytdetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/lytlabel"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtconf_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/confirmphone"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/edtconf_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:enabled="false"
                        android:hint="@string/confirmemail"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lytradiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/lytdetails"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/rdogrp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rdophone"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1" />

                        <RadioButton
                            android:id="@+id/rdoemail"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btngetcode"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lytmain"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_bg_design"
                android:layout_marginTop="5dp"
                android:text="@string/getcode" />

            <EditText
                android:id="@+id/edtcode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/btngetcode"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:hint="@string/codereceived" />

            <LinearLayout
                android:id="@+id/lytpassowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtcode"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"

                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtfirstpassowrd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:hint="@string/enterpass"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/edtconfirmpass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:hint="@string/Confirmpass"
                    android:inputType="textPassword" />


            </LinearLayout>

            <Button
                android:id="@+id/btnconfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lytpassowrd"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_design"
                android:text="@string/submitcode"></Button>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>