<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_include_top"
    tools:context=".Customer_account_configuration">

    <LinearLayout
        android:id="@+id/relative_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="8dp"
            android:onClick="CustAccBackbutton_click"
            android:src="@drawable/btn_back">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="CUSTOMER ACCOUNT CONFIGURATION"
            android:textSize="20dp"
            android:textStyle="bold|italic"
            android:textColor="@color/white"
            android:layout_marginTop="8dp">

        </TextView>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/Nav1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative_back"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/inner_nav1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_select_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/txt_select_account"></TextView>

            <Spinner
                android:id="@+id/spn_account_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inner_nav2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/inner_nav1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_priority"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Set as Priority Account"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"></CheckBox>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inner_nav3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/inner_nav2"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_lock_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/txt_lock_mode"></TextView>

            <Spinner
                android:id="@+id/spn_lock_mode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inner_nav4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/inner_nav3"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/txt_target"></TextView>

            <EditText
                android:id="@+id/edt_target_amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:inputType="numberDecimal"></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inner_nav5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/inner_nav4"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_maturity_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/txt_maturity_date"></TextView>

            <EditText
                android:id="@+id/date_maturity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:inputType="number"></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inner_nav6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/inner_nav5"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_payee_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="Payee Account:"></TextView>

            <EditText
                android:id="@+id/edt_payee_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inner_nav7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/inner_nav6"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="Reference No:"></TextView>

            <EditText
                android:id="@+id/edt_ref"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inner_nav8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inner_nav7"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_update_details"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/btn_bg_design"
                android:text="UPDATE"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"></Button>

            <Button
                android:id="@+id/btnsave_details"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="60dp"
                android:background="@drawable/btn_bg_design"
                android:text="SAVE"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"></Button>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>